--- a/src/Component/Body2/Body2.css
+++ b/src/Component/Body2/Body2.css
@@ -5,6 +5,13 @@
     background-size: cover;
 }
 
+@media screen and (max-width: 380px) {
+    .body{
+        height: 20em;
+        background-size: cover;
+    }
+}
+
 @media screen and (max-width: 600px) {
     .body{
         height: 20em;
