--- a/src/Component/Body/Body.css
+++ b/src/Component/Body/Body.css
@@ -25,8 +25,8 @@
 
 .tex1{
     padding: 10px;
-    line-height: 20px;
-    font-size: 18px;
+    /* line-height: 20px; */
+    font-size: 15px;
     text-align: center;
 }
 
@@ -68,7 +68,7 @@
     background-size: cover;
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 385px) {
     .al{
         height: 55em;
         background-color: gray;
@@ -104,8 +104,8 @@
 
     .tex1{
         padding: 5px;
-        line-height: 15px;
-        font-size: 10px;
+        /* line-height: 15px; */
+        font-size: 12.5px;
         text-align: center;
     }
 
@@ -132,7 +132,7 @@
 
 @media screen and (max-width: 600px) {
     .al{
-        height: 55em;
+        height: 50em;
         background-color: gray;
     }
     .al3 img{
@@ -166,8 +166,8 @@
 
     .tex1{
         padding: 5px;
-        line-height: 15px;
-        font-size: 10px;
+        /* line-height: 15px; */
+        font-size: 12.5px;
         text-align: center;
     }
 
@@ -221,8 +221,8 @@
     
     .tex1{
         padding: 10px;
-        line-height: 20px;
-        font-size: 18px;
+        /* line-height: 20px; */
+        font-size: 15px;
         text-align: center;
     }
     
@@ -293,8 +293,8 @@
     
     .tex1{
         padding: 10px;
-        line-height: 20px;
-        font-size: 18px;
+        /* line-height: 20px; */
+        font-size: 15px;
         text-align: center;
     }
     
@@ -365,8 +365,8 @@
     
     .tex1{
         padding: 10px;
-        line-height: 20px;
-        font-size: 18px;
+        /* line-height: 20px; */
+        font-size: 15px;
         text-align: center;
     }
     
@@ -437,8 +437,8 @@
     
     .tex1{
         padding: 10px;
-        line-height: 20px;
-        font-size: 18px;
+        /* line-height: 20px; */
+        font-size: 15px;
         text-align: center;
     }
     
