--- a/src/Component/Body3/Body3.css
+++ b/src/Component/Body3/Body3.css
@@ -33,39 +33,14 @@
   object-fit: cover;
 }
 
-@media screen and (max-width: 385px) {
-  .bold {
-    height: 70em;
-    background-color: skyblue;
-    background-size: cover;
-    align-items: center;
-    margin: auto auto auto auto;
-  }
-
-  .img7 img {
-    border-radius: 450px;
-    height: 150px;
-    width: 150px;
-    margin-left: 60px;
-    padding: 10px;
-  }
-
-  .all {
-    display: flex;
+@media screen and (max-width: 1024px) {
+  .all{
     flex-direction: column;
+    row-gap: 40px;
   }
 
-  .h4 {
-    font-size: 12px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding: 10px;
-  }
-
-  .page {
-    text-align: center;
-    font-size: 12.5px;
+  .bold{
+    height: 100%;
   }
 }
 
@@ -106,150 +81,3 @@
   }
 }
 
-@media screen and (min-width: 600px) {
-  .bold {
-    height: 100vh;
-    background-color: skyblue;
-    background-size: cover;
-  }
-
-  .all {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 100px;
-  }
-
-  .h4 {
-    color: midnightblue;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-  }
-
-  .page {
-    text-align: center;
-    line-height: 20px;
-    width: 22em;
-  }
-
-  .img7 img {
-    border-radius: 800px;
-    height: 200px;
-    width: 200px;
-    margin-left: 80px;
-    object-fit: cover;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .bold {
-    height: 100vh;
-    background-color: skyblue;
-    background-size: cover;
-  }
-
-  .all {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 100px;
-  }
-
-  .h4 {
-    color: midnightblue;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-  }
-
-  .page {
-    text-align: center;
-    line-height: 20px;
-    width: 22em;
-  }
-
-  .img7 img {
-    border-radius: 800px;
-    height: 200px;
-    width: 200px;
-    margin-left: 80px;
-    object-fit: cover;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .bold {
-    height: 100vh;
-    background-color: skyblue;
-    background-size: cover;
-  }
-
-  .all {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 100px;
-  }
-
-  .h4 {
-    color: midnightblue;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-  }
-
-  .page {
-    text-align: center;
-    line-height: 20px;
-    width: 22em;
-  }
-
-  .img7 img {
-    border-radius: 800px;
-    height: 200px;
-    width: 200px;
-    margin-left: 80px;
-    object-fit: cover;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .bold {
-    height: 100vh;
-    background-color: skyblue;
-    background-size: cover;
-  }
-
-  .all {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 100px;
-  }
-
-  .h4 {
-    color: midnightblue;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-  }
-
-  .page {
-    text-align: center;
-    line-height: 20px;
-    width: 22em;
-  }
-
-  .img7 img {
-    border-radius: 800px;
-    height: 200px;
-    width: 200px;
-    margin-left: 80px;
-    object-fit: cover;
-  }
-}
