--- a/src/Component/Navigation/Navigation.css
+++ b/src/Component/Navigation/Navigation.css
@@ -8,8 +8,12 @@
     top: 0;
 }
 
-.burger{
+#mobile{
     display: none;
+}
+
+#mobile i{
+    color: #fff;
 }
 
 .btn2{
@@ -56,298 +60,67 @@
     color: white;
 }
 
-@media screen and (max-width: 385px) {
-    .nav{
-        background-size: cover;
-        position: sticky;
-        top: 0;
-        height: 55px;
-    }
-
-    .burger{
-        display: block;
-    }
-
-    .link1{
-        display: none;
-    }
-
+@media screen and (max-width: 667px) {
     .link{
-        column-gap: 0;
-        padding: 2px;
-        font-size: 12px;
-    }
-
-    .btn2{
-       font-size: 9px;
-       padding: 5px; 
+        column-gap: 15px;
+        padding: 0;
+        margin-right: 5px;
     }
 
     .nav-logo{
-        color: blueviolet;
-        font-size: 10px;
-        font-family: 'Times New Roman', Times, serif;
+        font-size: 15px;
         padding: 10px;
     }
 }
-
 @media screen and (max-width: 600px) {
     .nav{
-        background-size: cover;
-        position: sticky;
-        top: 0;
         height: 55px;
     }
 
-    .burger{
+    .link1{
+        gap: 0px;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 55px;
+        right: -300px;
+        width: 200px;
+        height: 100vh;
+        background: rgb(58, 82, 92);
+        box-shadow: 0 40px 60px rgb(0, 0, 0.1);
+        padding: 40px 0 0 10px;
+        transition: 0.3s ease-in-out;
+    }
+
+    .link{
+        flex-direction: column;
+        background: none;
+        color: #fff;
+        font-size: 20px;
+    }
+
+    .link1 .active{
+            right: 0;
+    }
+
+    #mobile{
         display: block;
     }
 
-    .link1{
-        display: none;
-    }
-
-    .link{
-        column-gap: 0;
-        padding: 2px;
-        font-size: 12px;
+    #mobile i{
+        font-size: 30px;
+        cursor: pointer;
     }
 
     .btn2{
-       font-size: 9px;
-       padding: 5px; 
+       font-size: 10px;
+       background: none;
+       border: 2px solid  blueviolet;
     }
 
     .nav-logo{
-        color: blueviolet;
         font-size: 10px;
-        font-family: 'Times New Roman', Times, serif;
+        font-family: monospace;
         padding: 10px;
     }
-}
-
-
-@media screen and (min-width: 600px) {
-    .nav{
-        background-color: skyblue;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-size: cover;
-        position: sticky;
-        top: 0;
-    }
-    
-    .btn2{
-        border-radius: 8px;
-        padding: 10px;
-        border: none;
-        font-size: 18px;
-        background-color: blueviolet;
-        display: flex;
-        justify-content: center;
-    }
-    
-    .btn2 a{
-        text-decoration: none;
-    }
-    
-    .btn3{
-        color: white;
-    }
-    
-    .btn2 :hover{
-         color: rgb(214, 202, 202);
-         cursor: pointer;
-    }
-    
-    .nav-logo{
-        color: blueviolet;
-        font-size: 20px;
-        font-family: fantasy;
-        padding: 20px;
-    }
-    
-    .link{
-        column-gap: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
-        text-decoration: none;
-        font-size: 20px;
-    }
-    
-    .link:hover{
-        color: white;
-    }
-}
-
-
-@media screen and (min-width: 768px) {
-    .nav{
-        background-color: skyblue;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-size: cover;
-        position: sticky;
-        top: 0;
-    }
-    
-    .btn2{
-        border-radius: 8px;
-        padding: 10px;
-        border: none;
-        font-size: 18px;
-        background-color: blueviolet;
-        display: flex;
-        justify-content: center;
-    }
-    
-    .btn2 a{
-        text-decoration: none;
-    }
-    
-    .btn3{
-        color: white;
-    }
-    
-    .btn2 :hover{
-         color: rgb(214, 202, 202);
-         cursor: pointer;
-    }
-    
-    .nav-logo{
-        color: blueviolet;
-        font-size: 20px;
-        font-family: fantasy;
-        padding: 20px;
-    }
-    
-    .link{
-        column-gap: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
-        text-decoration: none;
-        font-size: 20px;
-    }
-    
-    .link:hover{
-        color: white;
-    }
-}
-
-@media screen and (min-width: 992px) {
-    .nav{
-        background-color: skyblue;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-size: cover;
-        position: sticky;
-        top: 0;
-    }
-    
-    .btn2{
-        border-radius: 8px;
-        padding: 10px;
-        border: none;
-        font-size: 18px;
-        background-color: blueviolet;
-        display: flex;
-        justify-content: center;
-    }
-    
-    .btn2 a{
-        text-decoration: none;
-    }
-    
-    .btn3{
-        color: white;
-    }
-    
-    .btn2 :hover{
-         color: rgb(214, 202, 202);
-         cursor: pointer;
-    }
-    
-    .nav-logo{
-        color: blueviolet;
-        font-size: 20px;
-        font-family: fantasy;
-        padding: 20px;
-    }
-    
-    .link{
-        column-gap: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
-        text-decoration: none;
-        font-size: 20px;
-    }
-    
-    .link:hover{
-        color: white;
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    .nav{
-        background-color: skyblue;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-size: cover;
-        position: sticky;
-        top: 0;
-    }
-    
-    .btn2{
-        border-radius: 8px;
-        padding: 10px;
-        border: none;
-        font-size: 18px;
-        background-color: blueviolet;
-        display: flex;
-        justify-content: center;
-    }
-    
-    .btn2 a{
-        text-decoration: none;
-    }
-    
-    .btn3{
-        color: white;
-    }
-    
-    .btn2 :hover{
-         color: rgb(214, 202, 202);
-         cursor: pointer;
-    }
-    
-    .nav-logo{
-        color: blueviolet;
-        font-size: 20px;
-        font-family: fantasy;
-        padding: 20px;
-    }
-    
-    .link{
-        column-gap: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
-        text-decoration: none;
-        font-size: 20px;
-    }
-    
-    .link:hover{
-        color: white;
-    }
-}
+} 
